--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "modern-angular",
-  "version": "0.0.0",
+  "description": "Training with modern angular.",
+  "author": "Thiago Martins de Freitas",
+  "email": "martins86@gmail.com",
+  "license": "MIT",
+  "homepage": "https://martins86.github.io/modern-angular/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
+    "build:ci": "npm run build -- --base-href=/.",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
+    "deploy:gh": "ng deploy",
+    "test": "ng test --coverage=true",
+    "test:watch": "ng test --watch",
+    "test:dev": "npm run test:watch -- --verbose --clearCache",
+    "test:ci": "npm run test -- --no-watch"
   },
   "private": true,
   "packageManager": "npm@11.6.2",
@@ -36,8 +33,22 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
+    "angular-cli-ghpages": "^2.0.3",
+    "@vitest/coverage-v8": "^4.0.16",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      }
+    ]
   }
 }
